--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,11 @@
 <html lang="en">
   <head>
     <!-- Your head content here -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portfolio website for Nick Sweet Full Stack software developer."> 
+    <meta http-equiv="cache-control" content="max-age=31536000, public">
+    <title>Nick Sweet Dev</title>
   </head>
   <body>
     <div id="root"></div> <!-- This is where your React app will be mounted -->
